Der Gruppeauswerten-Dialog wurde nochmal hinzugeügt, weil er beim letzen Push nicht berücksichtigt wurde